fix header spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c; 
+    height: 10vh;
 }
 /* logo */
 h1 {
